Fix spacing on fieldset legends without heading levels

--- a/src/nationalarchives/components/fieldset/fieldset.scss
+++ b/src/nationalarchives/components/fieldset/fieldset.scss
@@ -15,6 +15,8 @@
   &__heading {
     margin: 0;
     padding: 0;
+
+    display: block;
   }
 
   & &__hint {
